<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Spend-n-Save</string>
    <string name="insert_expense_MI">Insert new expense</string>
    <string name="insert_income_MI">Insert new income</string>
    <string name="show_expenses_MI">Show expenses</string>
    <string name="show_incomes_MI">Show incomes</string>
    <string name="category_manager_MI">Category Manager</string>
    <string name="export_MI">Export</string>
    <string name="quit_MI">Quit</string>
    <string name="newExpenseName_actv">What did you buy?</string>
    <string name="newExpenseValue_et">How much was it?</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="newIncomeNameHint_actv">Cool! You made some money!</string>
    <string name="newIncomeValueHint_actv">How much?</string>
    <string name="showTableNameHeader">Tablename</string>
    <string name="showToBeExportedHeader">Export it?</string>
    <string name="next">Next</string>
    <string name="expradio_this_month">This month</string>
    <string name="expradio_this_year">This year</string>
    <string name="expradio_last_month">Last month</string>
    <string name="expradio_all">All</string>
    <string name="newCategory">Add</string>
    <string name="delCategory">Delete</string>
    <string name="showExpenseItemHeader">Item name</string>
    <string name="showExpenseValueHeader">Item value</string>
    <string name="purchaseDateHeader">Purchase date</string>
    <string name="addNewCategoryHint">Name a new category</string>
    <string name="deleteExpenseFromList">Del</string>
    <string name="showIncomeNameHeader">Income name</string>
    <string name="showIncomeValueHeader">Income value</string>
    <string name="showIncomeDateHeader">Income date</string>
    <string name="deleteIncomeFromList">Del</string>
    <string name="showWhatShowEntriesFooter">Show all</string>
    <string name="showAllShowEntriesFooter">Show all</string>
	<string name="showPeriodShowEntriesFooter">Show period</string>
	<string name="budget_manager_MI">Manage budget</string>
	<string name="previousMonthBudget">Previous</string>
	<string name="nextMonthBudget">Next</string>
	<string name="showBudgetItemNameHeader">Budget item</string>
	<string name="showBudgetItemValueHeader">Value</string>
	<string name="showBudgetItemSpentPercHeader">Spent</string>
    <string name="addNewBudgetValueHint">How much?</string>
    <string name="addNewBudgetItem">Add</string>
    <string name="chooseBudgetMonth">Choose month</string>
    <string name="aboutme">I\'m developing some apps in my free time, if you have any suggestions, 
        please send them to dev.sandor@gmail.com. \n\n
        If you think you can save some money with the idea of this app and would like to prove my wife that
        it is worth to sit and work in front of my computer, donate me please some money, 
        so I can buy her a nice flower and a cold beer for me :) Cheers\n\n\n</string>
    <string name="about_MI">About</string>
    <string name="donateme_this_value_msg">Donate:</string>
    <string name="donateValueCurrTV">EUR</string>
    <string name="show_from_exp_btn">Show from</string>
    <string name="show_to_exp_btn">Show until</string>
    <string name="show_from_exp_tv">Show expenses from</string>
    <string name="show_to_exp_tv">Show expenses to</string>
    <string name="show_exp_cancel_btn">Cancel</string>
    <string name="show_exp_ok_btn">OK</string>
    <string name="show_from_inc_btn">Show from</string>
    <string name="show_to_inc_btn">Show until</string>
    <string name="show_from_inc_tv">Show incomes from</string>
    <string name="show_to_inc_tv">Show incomes to</string>
    <string name="show_inc_cancel_btn">Cancel</string>
    <string name="show_inc_ok_btn">OK</string>
    <string name="man_cat_header_cat">Category</string>
    <string name="man_cat_header_inc">Income</string>
    <string name="man_cat_header_exp">Expense</string>
</resources>
