<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:orientation="vertical">
    
<com.google.ads.AdView
          xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
          android:id="@+id/change_exp_period_ad"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
 		  ads:adUnitId="ca-app-pub-2833983884268240/1063562413"
          ads:adSize="SMART_BANNER"/>            

<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    android:orientation="horizontal">

<TextView
    android:id="@+id/ShowExpFromTV"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/show_from_exp_tv" />

<Button
    android:id="@+id/ShowExpFromBut"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="showDatePickerDialogFrom"
    android:text="@string/show_from_exp_btn" />


</LinearLayout>
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    android:orientation="horizontal">

<TextView
    android:id="@+id/ShowExpToTV"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/show_to_exp_tv" />
    
<Button
    android:id="@+id/ShowExpToBut"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="showDatePickerDialogTo"
    android:text="@string/show_to_exp_btn" />

</LinearLayout>
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    android:orientation="horizontal">

<Button
    android:id="@+id/ChangeExpPeriodOK"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="doOK"
    android:text="@string/show_exp_ok_btn" />
    

<Button
    android:id="@+id/ChangeExpPeriodCancel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="doCancel"
    android:text="@string/show_exp_cancel_btn" />


</LinearLayout>
</LinearLayout>
