<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:orientation="vertical">
    
<com.google.ads.AdView
          xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
          android:id="@+id/change_inc_period_ad"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
 		  ads:adUnitId="ca-app-pub-2833983884268240/1063562413"
          ads:adSize="SMART_BANNER"/>            

<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    android:orientation="horizontal">

<TextView
    android:id="@+id/ShowIncFromTV"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/show_from_inc_tv" />

<Button
    android:id="@+id/ShowIncFromBut"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="showDatePickerDialogFrom"
    android:text="@string/show_from_inc_btn" />


</LinearLayout>
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    android:orientation="horizontal">

<TextView
    android:id="@+id/ShowIncToTV"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/show_to_inc_tv" />
    
<Button
    android:id="@+id/ShowIncToBut"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="showDatePickerDialogTo"
    android:text="@string/show_to_inc_btn" />

</LinearLayout>
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    android:orientation="horizontal">

<Button
    android:id="@+id/ChangeIncPeriodOK"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="doOK"
    android:text="@string/show_inc_ok_btn" />
    

<Button
    android:id="@+id/ChangeIncPeriodCancel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="doCancel"
    android:text="@string/show_inc_cancel_btn" />


</LinearLayout>
</LinearLayout>
