<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="5dp" >

<TextView
    android:id="@+id/ShowWhatIncTV"
    android:layout_width="120dp"
    android:layout_height="wrap_content"
    android:layout_alignBottom="@+id/ChangeIncPeriodBut"
    android:layout_alignTop="@+id/ChangeIncPeriodBut"
    android:text="@string/showWhatShowEntriesFooter" />

<Button
    android:id="@+id/ShowAllIncome"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentRight="true"
    android:layout_centerVertical="true"
    android:onClick="showAllIncome"
    android:text="@string/showAllShowEntriesFooter" />

<Button
    android:id="@+id/ChangeIncPeriodBut"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@+id/ShowAllIncome"
    android:layout_alignBottom="@+id/ShowAllIncome"
    android:layout_centerHorizontal="true"
    android:onClick="changeIncPeriod"
    android:text="@string/showPeriodShowEntriesFooter" />

</RelativeLayout>
