<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="5dp" >

<TextView
    android:id="@+id/ShowWhatTV"
    android:layout_width="120dp"
    android:layout_height="wrap_content"
    android:layout_alignBottom="@+id/ChangeExpPeriodBut"
    android:layout_alignTop="@+id/ChangeExpPeriodBut"
    android:text="@string/showWhatShowEntriesFooter" />

<Button
    android:id="@+id/ShowAllEntries"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentRight="true"
    android:layout_centerVertical="true"
    android:onClick="showAllEntries"
    android:text="@string/showAllShowEntriesFooter" />

<Button
    android:id="@+id/ChangeExpPeriodBut"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@+id/ShowAllEntries"
    android:layout_alignBottom="@+id/ShowAllEntries"
    android:layout_centerHorizontal="true"
    android:onClick="changeExpPeriod"
    android:text="@string/showPeriodShowEntriesFooter" />

</RelativeLayout>
