<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <com.google.ads.AdView
          xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
          android:id="@+id/manage_categories_ad"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
 		  ads:adUnitId="ca-app-pub-2833983884268240/1063562413"
          ads:adSize="SMART_BANNER"/>        
   
	<LinearLayout 
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal" >
    
    <TextView
        android:id="@+id/showCategoryHeader"
        android:layout_width="120dp"
        android:layout_height="47dp"
        android:text="@string/man_cat_header_cat"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/showIncomeCatHeader"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/man_cat_header_inc"
        android:textSize="15sp" 
        />


    <TextView
        android:id="@+id/showExpenseCatHeader"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/man_cat_header_exp"
        android:textSize="15sp" 
         />

</LinearLayout>
</LinearLayout>

