<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
   
    
    <com.google.ads.AdView
          xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
          android:id="@+id/show_income_ad"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
 		  ads:adUnitId="ca-app-pub-2833983884268240/1063562413"
          ads:adSize="SMART_BANNER"/>        

    <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    
    <TextView
        android:id="@+id/showIncomeName"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/showIncomeNameHeader"
        android:layout_gravity="fill"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/showIncomeValue"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/showIncomeValueHeader"
        android:layout_gravity="fill"
        android:textSize="15sp" 
        />


    <TextView
        android:id="@+id/showIncomeDate"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/showIncomeDateHeader"
        android:layout_gravity="fill"
        android:textSize="15sp" 
         />
    
   	<Spinner
        android:id="@+id/selectIncCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:textSize="15sp" />
    
    

</LinearLayout>
</LinearLayout>