<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/about_the_app"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InsertExpense" >
    
    <com.google.ads.AdView
          xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
          android:id="@+id/about_me_ad"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
 		  ads:adUnitId="ca-app-pub-2833983884268240/1063562413"
          ads:adSize="SMART_BANNER"/>

    <TextView
        android:id="@+id/aboutme"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:autoLink="email"
        android:background="@android:color/transparent"
        android:text="@string/aboutme"
        android:textSize="15sp" />

        <LinearLayout
        	android:orientation="horizontal" 
            android:layout_width="wrap_content"
    		android:layout_height="wrap_content">
    		
           <TextView
		       android:id="@+id/donateValueTV"
		       android:layout_width="120dp"
		       android:layout_height="wrap_content"
		       android:text="@string/donateme_this_value_msg"
		       android:background="@android:color/transparent" 
		       android:textSize="25sp" />

	  		<EditText
    	   		android:id="@+id/donateValueET"
	    	   	android:layout_width="60dp"
		       	android:layout_height="wrap_content"
		       	android:hint=""
		       	android:background="@android:color/transparent"
		       	android:inputType="number" 
		       	android:textSize="25sp" />
	  		
	  		<TextView
		       android:id="@+id/donateValueCurrTV"
		       android:layout_width="wrap_content"
		       android:layout_height="wrap_content"
		       android:text="@string/donateValueCurrTV"
		       android:background="@android:color/transparent" 
		       android:textSize="25sp" />
	           
            
		</LinearLayout>
</LinearLayout>